# chat-app

./: .gitignore  Cargo.toml
backend/: Cargo.toml  docker-compose.yml
backend/migrations/2023-02-13-052425_init/: down.sql  up.sql
backend/src/: database.rs  lib.rs  schema.rs
backend/src/handlers/: users.rs
backend/src/models/: users.rs
backend/src/repository/: users.rs
src/: main.rs
