[package]
name = "chat-app"
version = "0.1.0"
authors = ["Peter Satoshi <dev@ngsl.xyz>"]
edition = "2021"
default-run = "chat-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
diesel = { version = "2.0.3", features = ["postgres"] }
dotenv = "0.15.0"

[dependencies.backend]
path = "backend"

[[bin]]
name = "create-user"
path = "backend/src/bin/users/create/main.rs"

[[bin]]
name = "update-user"
path = "backend/src/bin/users/update/main.rs"

[[bin]]
name = "delete-user"
path = "backend/src/bin/users/delete/main.rs"
