[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
chrono = { version = "0.4.23", features = ["serde"] }
diesel = { version = "2.0.3", features = ["extras", "postgres"] }
diesel_migrations = "2.0.0"
dotenv = "0.15.0"
rust-argon2 = "1.0.0"
serde = "1.0.152"
